# watch

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/faster_rcnn/: faster_rcnn_inception_v2_coco_2018_01_28.pbtxt
data/images/: list.csv  list1.csv
data/mobilenet/: ssd_mobilenet_v2_coco_2018_03_29.pbtxt
data/yolotiny/: yolov3-tiny.weights.1
scripts/: linux-install.sh  raspberry-pi3-install.sh
scripts/jetson-nano/: jetson-nano-install.sh
scripts/jetson-xavier/: buildOpenCV.sh  jetson-xavier-post-install.sh
scripts/linux/: linux-install.sh
scripts/macos/: mac-os-install.sh
scripts/raspberry-pi3/: patch-for-glut-library.diff  raspberry-pi3-install.sh
scripts/raspberry-pi4/: raspberry-pi4-checkout.sh  raspberry-pi4-install.sh  raspberry-pi4-postinstall.sh  raspberry-pi4-preinstall.sh
src/: camera_manager.cpp  camera_manager.h  face_recognition.cpp  facerecognition.cpp  facerecognition.h  mat_serialize_helper.cpp  mat_serialize_helper.h  md5_helper.cpp  md5_helper.h  objectdetection.cpp  objectdetection.h  objectdetection_age_caffe.cpp  objectdetection_age_caffe.h  objectdetection_gender_caffe.cpp  objectdetection_gender_caffe.h  objectdetection_haar.cpp  objectdetection_haar.h  objectdetection_ssdcaffe.cpp  objectdetection_ssdcaffe.h  objectdetection_yolo.cpp  objectdetection_yolo.h  objectdetection_yolotiny.cpp  objectdetection_yolotiny.h  objecttracker.cpp  objecttracker.h  pipeline.h  pipeline_manager.cpp  pipeline_manager.h  tracker.cpp  watch.cpp
src/database/: watch_mysql.cpp  watch_mysql.h
src/qt/: mainwindow.ui  watch_dialog_qt.cpp  watch_dialog_qt.h  watch_qt.cpp  watch_qt.h  watch_qt_data.h  watch_qt_main.cpp
